Copy/pasting objects used in modifiers (or objects in collections used in modifiers) are not linked to the scene #87189

Closed
opened 2021-04-04 11:24:51 +02:00 by Mr Chocolate Bar · 10 comments

System Information
Operating system:
Windows 10

Blender Version
Broken: (2.93.0 Alpha )
image.png

Short description of error
Fia8V0O17w.mp4

In the video Im not selecting the cut collection, however doing so wont make any apparent difference.

Exact steps for others to reproduce the error
🙄

Download to the file in the demo video
Boolean with procedural edge.blend (sorry about the unnecessary complexity of the scene)

**System Information** Operating system: Windows 10 **Blender Version** Broken: (2.93.0 Alpha ) ![image.png](https://archive.blender.org/developer/F9919596/image.png) **Short description of error** [Fia8V0O17w.mp4](https://archive.blender.org/developer/F9919615/Fia8V0O17w.mp4) In the video Im not selecting the cut collection, however doing so wont make any apparent difference. **Exact steps for others to reproduce the error** 🙄 **Download to the file in the demo video** [Boolean with procedural edge.blend](https://archive.blender.org/developer/F9919618/Boolean_with_procedural_edge.blend) (sorry about the unnecessary complexity of the scene)

#73219 was marked as duplicate of this issue

#73219 was marked as duplicate of this issue

Added subscriber: @Olliver

Added subscriber: @Olliver

Its worth mentioning that the objects still get pasted, so in my case here where I used the collection as a bool cutter collection this results in a bunch of ghost cutters that I cant alter, but that still cut into my mesh.

Its worth mentioning that the objects still get pasted, so in my case here where I used the collection as a bool cutter collection this results in a bunch of ghost cutters that I cant alter, but that still cut into my mesh.
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Note: blender pulls in the cutter collection, but does not link it to the scene, but you can do so manually:

  • go to Outliner, Blender File view
  • expand Collections
  • select cut collection
  • context menu > Link to Scene

That being said, I would also think that this is unexpected behavior.
@mont29: why would we not want to link the collection used in a modifier to the scene?
Same is true for objects btw., if these are used in modifiers, these sometimes also dont come over linked to the scene

#87189.blend

Note: blender pulls in the cutter collection, but does not link it to the scene, but you can do so manually: - go to `Outliner`, `Blender File` view - expand Collections - select `cut` collection - context menu > `Link to Scene` That being said, I would also think that this is unexpected behavior. @mont29: why would we not want to link the collection used in a modifier to the scene? Same is true for objects btw., if these are used in modifiers, these sometimes also dont come over linked to the scene [#87189.blend](https://archive.blender.org/developer/F9921710/T87189.blend)
Philipp Oeser changed title from Copy/pasting objects in any collection other than Scene Collection or Collection will go invisible in the outliner and 3D view in targeted scene to Copy/pasting objects used in modifiers (or objects in collections used in modifiers) are not linked to the scene 2021-04-06 13:07:52 +02:00

This is kind of expected behavior in append case, but paste code on top of it is indeed doing fairly weird things... Fix incoming.

This is kind of expected behavior in append case, but paste code on top of it is indeed doing fairly weird things... Fix incoming.

This issue was referenced by 798e593002

This issue was referenced by 798e59300280605b8886d9a1f52e1fcf8e5ac008

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-10-01 12:25:30 +02:00

Added subscriber: @3di

Added subscriber: @3di
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87189
No description provided.