Append: Fix appended objects potentially auto-instantiated in more than one collection.

Related to T87189.